crates/embucket-functions/src/tests/conversion/snapshots/to_date/query_to_date_yyyy_format_1.snap
---
source: crates/embucket-functions/src/tests/conversion/to_date.rs
description: "\"SELECT TRY_TO_DATE('5/7/99', 'MM/DD/YYYY')\""
---
Ok(
    [
        "+------------------------------------------------+",
        "| try_to_date(Utf8(\"5/7/99\"),Utf8(\"MM/DD/YYYY\")) |",
        "+------------------------------------------------+",
        "|                                                |",
        "+------------------------------------------------+",
    ],
)
